# grimoire

./: .gitignore  Cargo.toml  README.md
db/: schema.sql
src/: config.rs  db.rs  filters.rs  lib.rs  main.rs  response.rs  tmdb.rs
src/routes/: main.rs
src/routes/main/: add_media.rs  add_watch.rs  index.rs  list.rs  movie.rs  search.rs  show.rs  show_episode.rs  show_season.rs
src/trakt/: import.rs
templates/: base.html  error.html  index.html  list.html  movie.html  search_result.html  show.html  show_episode.html  show_season.html
