[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
askama = "0.14.0"
askama_web = { version = "0.14.2", features = ["axum-0.8"] }
deadpool-postgres = "0.14.1"
anyhow = "1.0.98"
zip = "4.0.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
postgres-types = { version = "0.2.9", features = ["derive"] }
# waiting for jiff 0.2 support for tokio-postgres
jiff = { version = "0.1", features = ["serde"] }
tokio-postgres = { version = "0.7.9", features = ["with-jiff-0_1"] }
reqwest = { version = "0.12.16", features = ["json"] }
